fix: long name truncated (#178)
fix: #151

--- a/src/components/ContactInfo/ContactInfo.scss
+++ b/src/components/ContactInfo/ContactInfo.scss
@@ -27,6 +27,12 @@
 
             &.name {
                 display: flex;
+                h2 {
+                    max-width: 360px;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                }
             }
 
             &-address {
